revise meeting agenda 4 after delivery

--- a/meeting_agendas/4_discrete_rvs_common_distr.Rmd
+++ b/meeting_agendas/4_discrete_rvs_common_distr.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-<bring to class: packets of three sets of cards, dice>
+<bring to class: dice>
 
 ## I. Start-of-class work: Die rolling (10 min)
 
