add HW 3 rubric Bayes Course SP19

--- a/rubrics/HW2_rubric.tex
+++ b/rubrics/HW2_rubric.tex
@@ -23,7 +23,7 @@
 
 % The argument determines the number of score buckets
 \begin{rubrictable}{4}{0}
-  % Add your \rubricdesc items in increasing order!
+  % Add your \rubricdesc items in increasing order!g
 
   %% Category Description
   \rubriccat{Point value label}{
