--- a/rubrics/HW3_rubric.tex
+++ b/rubrics/HW3_rubric.tex
@@ -12,14 +12,14 @@
 
 \rubriccourse{MATH 429/629 Introduction to Bayesian Statistics}
 \rubricterm{Spring 2019}
-\rubricthing{Homework 2}
+\rubricthing{Homework 3}
 \rubrictopprompt{Name}
 %% \rubricbottomprompt{Total Score}
 
 \begin{document}
 \maketitle
 
-{\large Please complete exercises Ch.5, \#1-3,5-7,10 in Bolstad \& Curran. I selected these problems to give deliberate practice towards mastering learning outcome 2 --- \emph{students will model parameters and data using discrete and continuous random variables.} I aimed to avoid redundancy except when needed for slippery concepts or difficult computation. Questions 1, 2 provide practice for calculating discrete probabilities, expectation, variance, and linear transformations of discrete random variables. Questions 3,5 develop intuition on the binomial distribution. Meanwhile, Questions 6 and 7 do the same for hypergeometric and Poisson, respectively. All three distributions are commonly used in modern Bayesian analysis. Lastly, Question 10 develop essential knowledge in working with multivariate discrete distributions, including calculating marginal, conditional, and joint distributions. You may write R code to be more efficient --- just be sure to justify your work well.}
+{\large Please complete exercises Ch.6, \#1-3,7,C1-C4 in Bolstad \& Curran. I selected these problems to give deliberate practice towards mastering learning outcome 3 --- \emph{students will conduct Bayesian inference for parameters of discrete and continuous random variables}. Questions 1-3 provide practice for calculating Bayes' rule for discrete random variables, both for a single observed value and multiple observations at a time. Question 7 applies Bayes' rule for the Poisson setting. Lastly, Question C1-C4 present the first computational exercises of the text. These questions guide you in using the \textsc{Bolstad} R package to calculate Bayes' rule for discrete random variables using predefined functions. You do not have to report all your R code --- just be sure to justify your work well.}
 
 % The argument determines the number of score buckets
 \begin{rubrictable}{4}{0}
