--- a/course_materials/Intro-to-Bayesian-Statistics_project_organization.tex
+++ b/course_materials/Intro-to-Bayesian-Statistics_project_organization.tex
@@ -77,8 +77,8 @@ For each part of the project, hand in a single assignment for the group, giving 
 \begin{enumerate}
   \itemsep0em
 \item Form groups up to 3 (due meeting 9): Form a group, if desired. You may work alone.
-\item Present your research topic (due meeting 11) and recruit undergraduate students: Give 5 minute presentation to class on your proposed research topic. After the talk, undergraduate students should express interest in working with any group.
-\item Final groups forms (due meeting 12): Submit your final group including graduate and undergraduate students.
+\item Present your research topic and recruit undergraduate students (due meeting 11): Give a 5-minute presentation to the class on your proposed research topic. After the talk, undergraduate students should express interest in working with any group.
+\item Form the final group (due meeting 12): Submit your final group team, including graduate and undergraduate students.
 \item Meet with your instructor (due by meeting 14): Set up a time with your instructor for 15 - 30 minute meeting to brainstorm about your project. At the end of the meeting, you should have a specific research question and plan of what sort of data you will gather and analyze.
 \item Meet with your instructor (due by meeting 17): Set up a time with your instructor for 15 - 30 minute to generate a preliminary data analysis plan.
 \item Meet with your instructor (due by meeting 22): Set up a time with your instructor for 15 - 30 minute to present preliminary results. Develop 1 - 3 key figures to bring to the meeting.
