add table of points to project organization

--- a/course_materials/Intro-to-Bayesian-Statistics_project_organization.tex
+++ b/course_materials/Intro-to-Bayesian-Statistics_project_organization.tex
@@ -66,10 +66,6 @@
 \section*{Project overview}
 Graduate students will complete an independent research project. I encourage you to work on projects related to your graduate research, if possible. Separate rubrics and checklists will describe the standards for each item below.
 
-\section*{Undergraduate participation}
-
-Undergraduate students may contribute to a project, if the graduate student(s) agree to direct and supervise their work. Undergraduate students will serve as ``research assistants'' with budget of no more than an average of 1 - 2 hours of work a week. In return, any undergraduate student will have to option to replace a midterm grade (50 points) with the graduate student group's evaluation grade. Also, I may ask undergraduate students to evaluate projects and vote towards the ``best in class'' project.
-
 \section*{Detailed instructions and work products}
 
 For each part of the project, hand in a single assignment for the group, giving the names of all group members. Your group will share the grade for all parts of the project. Make sure to keep your own copies of submitted work as we go along. 
@@ -86,6 +82,28 @@ For each part of the project, hand in a single assignment for the group, giving 
 \item Present and submit your final project (due meeting 28): Present and submit project final product. This will be either a written report or a poster.
   
 \end{enumerate}
+
+\begin{table}
+  \centering
+  \begin{tabular}{l|lll}
+    Item \# & Task & Due by (meeting number) & Max Points \\
+    \hline
+    1 & Announce grad group & 2/25/19 (9) & 1 \\
+    2 & Project proposal talk & 3/4/19 (11) & 5 \\
+    3 & Announce final group & 3/6/19 (12) & 2 \\
+    4 & Meet with me to plan 1 & 3/13/19 (14) & 4 \\
+    5 & Meet with me to plan 2 & 4/08/19 (19) & 4 \\
+    6 & Meet with me to plan 3 & 4/17/19 (22) & 4 \\
+    7 & Submit near final draft & 4/29/19 (25) & 10 \\
+    8 & Submit/present final project & 5/13/19 (28) & 120 \\
+    \hline
+    Total & Total project points & NA & 150 \\
+  \end{tabular}
+\end{table}
+
+\section*{Undergraduate participation}
+
+Undergraduate students may contribute to a project, if the graduate student(s) agree to direct and supervise their work. Undergraduate students will serve as ``research assistants'' with budget of no more than an average of 1 - 2 hours of work a week. In return, any undergraduate student will have to option to replace a midterm grade (50 points) with the graduate student group's evaluation grade. Also, I may ask undergraduate students to evaluate projects and vote towards the ``best in class'' project.
 
 
 \end{document}
