update course materials after midterm two

--- a/course_materials/Intro-to-Bayesian-Statistics_learning_outcomes.tex
+++ b/course_materials/Intro-to-Bayesian-Statistics_learning_outcomes.tex
@@ -102,7 +102,7 @@ Students will be able to $\ldots$
 %% \item will apply robust Bayes methods for prior misspecification.
 %% \item conduct Bayesian inference for parameters in a multivariate Normal.
 \item apply computational techniques to conduct Bayesian inference, including Markov Chain Monte Carlo.
-\item compare Frequentist/Bayesian approaches in statistical inference.
+\item compare Frequentist/Bayesian approaches to statistical inference.
 \item develop and evaluate a Bayesian model for real world data.
 
 \end{enumerate}
