--- a/meeting_agendas/26_midterm_four.Rmd
+++ b/meeting_agendas/26_midterm_four.Rmd
@@ -25,7 +25,7 @@ If you finish early, then please submit your work and return your desk. You may 
 
 Let's discuss the solutions as drafted and make sure we all agree on the correct answers, identify any poor questions, etc.
 
-## Closing (5 min)
+## Closing: Exam Wrapper (5 min)
 
 Reflect on your exam performance.
 
